--- a/src/main/templates/kubernetes-cluster-create.template
+++ b/src/main/templates/kubernetes-cluster-create.template
@@ -290,33 +290,33 @@ Mappings:
   # http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html
   RegionMap:
     us-west-1:
-      '64': ami-e7604c87
+      '64': ami-74012814
     ap-south-1:
-      '64': ami-d82759b7
+      '64': ami-1e6d1571
     eu-west-2:
-      '64': ami-6a17010e
+      '64': ami-7942531d
     eu-west-1:
-      '64': ami-c99f84af
+      '64': ami-421bf53b
     ap-northeast-2:
-      '64': ami-d61fc0b8
+      '64': ami-d373adbd
     ap-northeast-1:
-      '64': ami-58786f3f
+      '64': ami-eb81608d
     sa-east-1:
-      '64': ami-88c5aee4
+      '64': ami-00dfab6c
     ca-central-1:
-      '64': ami-9cac13f8
+      '64': ami-d3338cb7
     ap-southeast-1:
-      '64': ami-b4f877d7
+      '64': ami-1364f470
     ap-southeast-2:
-      '64': ami-40eafa23
+      '64': ami-115f4072
     eu-central-1:
-      '64': ami-dfa204b0
+      '64': ami-eb852884
     us-east-1:
-      '64': ami-a90a20bf
+      '64': ami-2d4d5f3b
     us-east-2:
-      '64': ami-cf7756aa
+      '64': ami-d77454b2
     us-west-2:
-      '64': ami-9fdacee6
+      '64': ami-025e467b
 
   BetaURLMap:
     "True":
@@ -388,6 +388,11 @@ Resources:
                 LoadBalancerName: !Ref ApiLoadBalancer
                 ClusterToken: !GetAtt KubeadmToken.Token
                 NetworkingProviderUrl: !Sub "https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}/scripts/${NetworkingProvider}.yaml"
+                DashboardUrl: 
+                  Fn::FindInMap:
+                    - BetaURLMap
+                    - !Ref BetaCFT
+                    - K8sDashURL
                 Region: !Ref AWS::Region
 
             # Avi config template file
@@ -400,13 +405,13 @@ Resources:
               mode: '000666'
 
             # kubernetes dashboard
-            "/tmp/kubernetes-dashboard.yaml":
-              source:
-                Fn::FindInMap:
-                  - BetaURLMap
-                  - !Ref BetaCFT
-                  - K8sDashURL
-              mode: '000666'
+            #"/tmp/kubernetes-dashboard.yaml":
+            #  source:
+            #    Fn::FindInMap:
+            #      - BetaURLMap
+            #      - !Ref BetaCFT
+            #      - K8sDashURL
+            #  mode: '000666'
 
             "/tmp/gallery-app.yaml":
               source:
@@ -454,8 +459,8 @@ Resources:
             #  command: "kubectl delete ds kube-proxy -n kube-system --kubeconfig=/etc/kubernetes/admin.conf"
 
             # Install kubernetes dashboard
-            "05-k8s-dashboard":
-              command: "kubectl apply -f /tmp/kubernetes-dashboard.yaml --kubeconfig=/etc/kubernetes/admin.conf"
+            #"05-k8s-dashboard":
+            #  command: "kubectl apply -f /tmp/kubernetes-dashboard.yaml --kubeconfig=/etc/kubernetes/admin.conf"
 
             # Install kubernetes dashboard
             "06-demo-app":
@@ -733,7 +738,7 @@ Resources:
             # This joins the existing cluster with kubeadm.  Kubeadm is preinstalled in the AMI this template uses, so
             # all that's left is to join the cluster with the correct token.
             "03-k8s-setup-node":
-              command: !Sub "kubeadm reset && kubeadm join --token=${KubeadmToken.Token} ${K8sMasterInstance.PrivateIp}:6443"
+              command: !Sub "kubeadm reset && kubeadm join --node-name=\"$(hostname -f)\" --token=${KubeadmToken.Token} ${K8sMasterInstance.PrivateIp}:6443"
     Properties:
       # Refers to the NodeInstanceProfile resource, which applies the IAM role for the nodes
       # The IAM role allows us to create further AWS resources (like an EBS drive) from the cluster
