--- a/src/main/templates/apps/gallery-app.yaml
+++ b/src/main/templates/apps/gallery-app.yaml
@@ -146,7 +146,7 @@ spec:
         name: app-photo
         env:
         - name: SUBDOMAIN
-          value: "{{NS_SUBDOMAIN}}"
+          value: "{{EW_SUBDOMAIN}}"
         ports:
         - containerPort: 8080
           protocol: TCP
