--- a/src/main/templates/kubernetes-cluster-create.template
+++ b/src/main/templates/kubernetes-cluster-create.template
@@ -290,33 +290,33 @@ Mappings:
   # http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html
   RegionMap:
     us-west-1:
-      '64': ami-e7604c87
+      '64': ami-965965f6
     ap-south-1:
-      '64': ami-d82759b7
+      '64': ami-27d59748
     eu-west-2:
-      '64': ami-6a17010e
+      '64': ami-22908d46
     eu-west-1:
-      '64': ami-c99f84af
+      '64': ami-a7df7ade
     ap-northeast-2:
-      '64': ami-d61fc0b8
+      '64': ami-4401a42a
     ap-northeast-1:
-      '64': ami-58786f3f
+      '64': ami-ad60c1cb
     sa-east-1:
-      '64': ami-88c5aee4
+      '64': ami-db1860b7
     ca-central-1:
-      '64': ami-9cac13f8
+      '64': ami-c7843ca3
     ap-southeast-1:
-      '64': ami-b4f877d7
+      '64': ami-dce8a9bf
     ap-southeast-2:
-      '64': ami-40eafa23
+      '64': ami-408c6322
     eu-central-1:
-      '64': ami-dfa204b0
+      '64': ami-3058e35f
     us-east-1:
-      '64': ami-a90a20bf
+      '64': ami-9fa90ee5
     us-east-2:
-      '64': ami-cf7756aa
+      '64': ami-4686aa23
     us-west-2:
-      '64': ami-9fdacee6
+      '64': ami-f431fe8c
 
   BetaURLMap:
     "True":
@@ -393,6 +393,7 @@ Resources:
                     - BetaURLMap
                     - !Ref BetaCFT
                     - K8sDashURL
+                StorageClassUrl: !Sub "https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}/scripts/default.storageclass.yaml"
                 Region: !Ref AWS::Region
 
             # Avi config template file
@@ -501,6 +502,16 @@ Resources:
           - AssociationProvidedCondition
           - !Ref ClusterAssociation
           - !Ref AWS::StackName
+        # Also tag it with kubernetes.io/cluster/clustername=owned, which is the newer convention for cluster resources
+      - Key:
+          Fn::Sub:
+          - "kubernetes.io/cluster/${ClusterID}"
+          - ClusterID:
+              Fn::If:
+              - AssociationProvidedCondition
+              - !Ref ClusterAssociation
+              - !Ref AWS::StackName
+        Value: 'owned'
       # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html#cfn-ec2-instance-imageid
       ImageId:
         Fn::FindInMap:
@@ -659,6 +670,17 @@ Resources:
           - !Ref ClusterAssociation
           - !Ref AWS::StackName
         PropagateAtLaunch: 'true'
+      # Also tag it with kubernetes.io/cluster/clustername=owned, which is the newer convention for cluster resources
+      - Key:
+          Fn::Sub:
+          - "kubernetes.io/cluster/${ClusterID}"
+          - ClusterID:
+              Fn::If:
+              - AssociationProvidedCondition
+              - !Ref ClusterAssociation
+              - !Ref AWS::StackName
+        Value: 'owned'
+        PropagateAtLaunch: 'true'
     # Tells the group how many instances to update at a time, if an update is applied
     UpdatePolicy:
       AutoScalingRollingUpdate:
@@ -703,6 +725,17 @@ Resources:
           - AssociationProvidedCondition
           - !Ref ClusterAssociation
           - !Ref AWS::StackName
+        PropagateAtLaunch: 'true'
+      # Also tag it with kubernetes.io/cluster/clustername=owned, which is the newer convention for cluster resources
+      - Key:
+          Fn::Sub:
+          - "kubernetes.io/cluster/${ClusterID}"
+          - ClusterID:
+              Fn::If:
+              - AssociationProvidedCondition
+              - !Ref ClusterAssociation
+              - !Ref AWS::StackName
+        Value: 'owned'
         PropagateAtLaunch: 'true'
     # Tells the group how many instances to update at a time, if an update is applied
     UpdatePolicy:
@@ -874,6 +907,15 @@ Resources:
           - AssociationProvidedCondition
           - !Ref ClusterAssociation
           - !Ref AWS::StackName
+      - Key:
+          Fn::Sub:
+          - "kubernetes.io/cluster/${ClusterID}"
+          - ClusterID:
+              Fn::If:
+              - AssociationProvidedCondition
+              - !Ref ClusterAssociation
+              - !Ref AWS::StackName
+        Value: 'owned'
       - Key: Name
         Value: k8s-cluster-security-group
 
@@ -1074,6 +1116,15 @@ Resources:
           - AssociationProvidedCondition
           - !Ref ClusterAssociation
           - !Ref AWS::StackName
+      - Key:
+          Fn::Sub:
+          - "kubernetes.io/cluster/${ClusterID}"
+          - ClusterID:
+              Fn::If:
+              - AssociationProvidedCondition
+              - !Ref ClusterAssociation
+              - !Ref AWS::StackName
+        Value: 'owned'
       - Key: 'kubernetes.io/service-name'
         Value: 'kube-system/apiserver-public'
 
