corrected o/p for k8s dashboard

--- a/src/main/templates/kubernetes-cluster-with-new-vpc.template
+++ b/src/main/templates/kubernetes-cluster-with-new-vpc.template
@@ -565,7 +565,7 @@ Outputs:
 
   KubernetesDashboard:
     Description: Kubernetes Dashboard URL
-    Value: !Sub https://kubernetes-dashboard.${R53HostedZone}
+    Value: !Sub https://kubernetes-dashboard.kube-system.${R53HostedZone}
 
   AppPublicVip:
     Description: Public Vip of the photo application
